Working version of flask-eve

--- a/fig.yml
+++ b/fig.yml
@@ -7,7 +7,12 @@ web:
    - .:/code
   links:
    - redis
+   - mongo
 redis:
   image: redis
-mongodb:
-  image: mongodb
+  ports:
+   - "6379:6379"
+mongo:
+  image: mongo
+  ports:
+   - "27017:27017"
